--- a/NotifyDemo/pom.xml
+++ b/NotifyDemo/pom.xml
@@ -3,26 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>ru.webdev</groupId>
+        <artifactId>MultiThreadExample</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>ru.webdev</groupId>
-    <artifactId>MultiThreadExample</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>Main</module>
-        <module>hrAndEmploees</module>
-        <module>CreateThreadsDemo</module>
-        <module>VolatileDemo</module>
-        <module>VolatileDemo</module>
-        <module>AtomicDemo</module>
-        <module>InterruptedDemo</module>
-        <module>NotifyDemo</module>
-    </modules>
+    <artifactId>NotifyDemo</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+
 </project>
