--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>SemaphoreDemo</module>
         <module>ExecutorsDemo</module>
         <module>CallableDemo</module>
+        <module>CompletableFutureDemo</module>
     </modules>
 
     <properties>
